# rules_kicad

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE.md  MODULE.bazel  README.md  WORKSPACE  deps.bzl  kicad.bzl  renovate.json  repos.bzl  requirements.txt  requirements_lock.txt  requirements_windows.txt
.github/workflows/: build.yml  test.yml
examples/: BUILD.bazel  README.md  comet.kicad_pcb  comet_parts.csv  make_demo_donut.py
tools/: BUILD.bazel  bom.py  defs.bzl  gerbers.py
