load("@rules_python//python:pip.bzl", "compile_pip_requirements")

alias(
    name = "python_toolchain",
    actual = "@kicad//:python_toolchain",
    visibility = ["//visibility:public"],
)

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = ":requirements.txt",
    requirements_txt = ":requirements_lock.txt",
    requirements_windows = "requirements_windows.txt",
)

exports_files([
    "requirements.txt",
    "requirements_lock.txt",
    "requirements_windows.txt",
])
