load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_kicad//tools:defs.bzl", "kicad_bom", "kicad_gerbers")
load("@pip//:requirements.bzl", "requirement")

kicad_gerbers(
    name = "comet_gerbers",
    src = "comet.kicad_pcb",
)

kicad_bom(
    name = "comet_bom",
    src = "comet.kicad_pcb",
    component_file = "comet_parts.csv",
    fields = [
        "Designator",
        "Package",
        "Value",
        "LCSC Part Number",
    ],
)

kicad_bom(
    name = "comet_cpl",
    src = "comet.kicad_pcb",
    component_file = "comet_parts.csv",
    fields = [
        "Designator",
        "Mid X",
        "Mid Y",
        "Rotation",
        "Layer",
    ],
)

py_binary(
    name = "make_demo_donut",
    srcs = ["make_demo_donut.py"],
    deps = [
        #"@kicad//:pcbnew",
        requirement("absl-py"),
    ],
)

# genrule(
#     name = "demo_donut",
#     outs = ["demo_donut.kicad_pcb"],
#     cmd = "./$(execpath :make_demo_donut) --output=\"$@\"",
#     exec_tools = [":make_demo_donut"],
# )

# kicad_gerbers(
#     name = "demo_donut_gerbers",
#     src = "demo_donut",
# )

# kicad_bom(
#     name = "demo_donut_bom",
#     src = ":demo_donut",
# )
