load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@pip//:requirements.bzl", "requirement")
load("@rules_kicad//tools:defs.bzl", "kicad_bom", "kicad_gerbers")
load("@rules_python//python:defs.bzl", "py_binary")

kicad_gerbers(
    name = "comet_gerbers",
    src = "comet.kicad_pcb",
)

kicad_bom(
    name = "comet_bom",
    src = "comet.kicad_pcb",
    component_file = "comet_parts.csv",
    fields = [
        "Designator",
        "Package",
        "Value",
        "LCSC Part Number",
    ],
)

kicad_bom(
    name = "comet_cpl",
    src = "comet.kicad_pcb",
    component_file = "comet_parts.csv",
    fields = [
        "Designator",
        "Mid X",
        "Mid Y",
        "Rotation",
        "Layer",
    ],
)

py_binary(
    name = "make_demo_donut",
    srcs = ["make_demo_donut.py"],
    deps = [
        requirement("absl-py"),
    ],
)

genrule(
    name = "demo_donut",
    outs = ["demo_donut.kicad_pcb"],
    cmd = "$(location :make_demo_donut) --output=\"$@\"",
    tools = [":make_demo_donut"],
)

kicad_gerbers(
    name = "demo_donut_gerbers",
    src = "demo_donut",
)

kicad_bom(
    name = "demo_donut_bom",
    src = ":demo_donut",
)

build_test(
    name = "build_test",
    targets = [
        ":comet_gerbers",
        ":comet_bom",
        ":comet_cpl",
        ":demo_donut",
        ":demo_donut_bom",
    ],
)
