load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")

py_binary(
    name = "gerbers",
    srcs = ["gerbers.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
    ],
)

py_binary(
    name = "bom",
    srcs = ["bom.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
    ],
)
