load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "gerbers",
    srcs = ["gerbers.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
        "//:pcbnew",
    ],
)

py_binary(
    name = "bom",
    srcs = ["bom.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//:pcbnew",
        requirement("absl-py"),
    ],
)
