load("@pip//:requirements.bzl", "requirement")
load("@python_3_10//:defs.bzl", "py_binary")

py_binary(
    name = "gerbers",
    srcs = ["gerbers.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
    ],
)

py_binary(
    name = "bom",
    srcs = ["bom.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("absl-py"),
    ],
)
